--- a/src/Second.css
+++ b/src/Second.css
@@ -6,7 +6,14 @@
     --orange: #ffcc81;
     --cyan: #7ed1e2;
   }
-  
+  svg {
+    display: block;
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+  }
   .base-cat-container {
     height: 100vh;
     width: 100vw;
