--- a/src/Design/NeonCat/style.css
+++ b/src/Design/NeonCat/style.css
@@ -6,13 +6,13 @@
   --orange: #ffcc81;
   --cyan: #7ed1e2;
 }
-svg {
+.cat-container svg {
   display: block;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   position: fixed;
-  top: 0;
-  left: 0;
+  top: 20%;
+  left: 28%;
 }
 .base-cat-container {
   height: 100vh;
